fix non-gallery panels horizontally overflowing

--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -350,7 +350,7 @@ th {
   transition-property: opacity;
   position: absolute;
   width: var(--content-width);
-  max-width: var(--content-width);
+  max-width: calc(100vw - (var(--se-gap) * 2));
 }
 
 #collapsibles > *.visible {
